<?xml version="1.0"?>
<package format="2">
  <name>softjig_ros</name>
  <version>0.0.0</version>
  <description>The softjig_ros package</description>
  <maintainer email="sakuma.tatsuya.sn1@is.naist.jp">tatsuya-s</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
</package>
